--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,7 +8,7 @@ target 'QiscusChatSDKRNSample' do
 
   use_react_native!(:path => config["reactNativePath"])
 
-  pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
+  # pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
 
   target 'QiscusChatSDKRNSampleTests' do
     inherit! :complete
@@ -19,9 +19,14 @@ target 'QiscusChatSDKRNSample' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
+  use_flipper!({ 'Flipper' => '0.87.0', 'Flipper-Folly' => '2.5.3', 'Flipper-RSocket' => '1.3.1' })
   post_install do |installer|
     flipper_post_install(installer)
+      installer.pods_project.targets.each do |target|
+       target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+       end
+    end
   end
 end
 
